[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/laserRed01.png" type="Texture" id=1]
[ext_resource path="res://scripts/Laser.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 40.0

[node name="Laser" type="Area2D"]
script = ExtResource( 2 )
speed = 750

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0

[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
